--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header>
     <section class="section">
         <div class="row header">
-            <a href="/" class="link">Home</a>
+            <a href="/Homeworks-typescript-vlasov/index.html" class="link">Home</a>
             <a href="https://github.com/" class="link">View on github</a>
         </div>
     </section>
@@ -27,41 +27,11 @@
     </section>
 
     <section class="section">
-        <div class="root  scroll row" id="ts_root">
-
-<!--            <div class="task_card">-->
-<!--                <div class="ts_logo">-->
-<!--                    <span class="logo_text">TS</span>-->
-<!--                </div>-->
-<!--                <div class="task_info">-->
-<!--                    <p class="title_text">Blockchain system</p>-->
-<!--                    <div class="description">-->
-<!--                        <p class="simple_text">script that will define a simple blockchain structure </p>-->
-<!--                    </div>-->
-<!--                    <button class="button" name="task_btn">View</button>-->
-<!--                </div>-->
-<!--            </div>-->
-
-        </div>
+        <div class="root  scroll row" id="ts_root"></div>
 
     </section>
     <section class="section">
-        <div class="root  scroll row" id="js_root">
-
-<!--            <div class="task_card">-->
-<!--                <div class="js_logo">-->
-<!--                    <span class="logo_text">JS</span>-->
-<!--                </div>-->
-<!--                <div class="task_info">-->
-<!--                    <p class="title_text">Blockchain system</p>-->
-<!--                    <div class="description">-->
-<!--                        <p class="simple_text">script that will define a simple blockchain structure </p>-->
-<!--                    </div>-->
-<!--                    <button class="button" name="task_btn">View</button>-->
-<!--                </div>-->
-<!--            </div>-->
-
-        </div>
+        <div class="root  scroll row" id="js_root"></div>
     </section>
 </header>
 
