add root container for html content from tasks

--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
 </head>
 <body>
 <header>
-    <section class="section">
-        <div class="row header">
-            <a href="/Homeworks-typescript-vlasov/index.html" class="link">Home</a>
-            <a href="https://github.com/" class="link">View on github</a>
-        </div>
-    </section>
 
-    <section class="section">
+    <div class="row header section">
+        <a href="/Homeworks-typescript-vlasov/index.html" class="link">Home</a>
+        <a href="https://github.com/" class="link">View on github</a>
+    </div>
+</header>
+<section id="root_cnt">
+    <div class="section">
         <div class="description">
             <p class="simple_text">All home tasks using javascript, typescript, html and css by Volodymyr Vlasov</p>
         </div>
-    </section>
+    </div>
 
-    <section class="section">
+    <div class="section">
         <div class="root  scroll row" id="ts_root"></div>
 
-    </section>
+    </div>
     <section class="section">
         <div class="root  scroll row" id="js_root"></div>
     </section>
-</header>
+</section>
 
 
 <script type="module" src="out/scr/index.js"></script>
