add render html task part method

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header>
 
     <div class="row header section">
-        <a href="/Homeworks-typescript-vlasov/index.html" class="link">Home</a>
+        <a href="/Homeworks-typescript-vlasov/index.html" class="link">Start page</a>
         <a href="https://github.com/" class="link">View on github</a>
     </div>
 </header>
