--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
           rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./scr/tasks/task_3/ui/style.css">
     <title>Homeworks</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
 
     <div class="row header section">
         <a href="/Homeworks-typescript-vlasov/index.html" class="link">Start page</a>
-        <a href="https://github.com/" class="link">View on github</a>
+        <a target="_tab" href="https://github.com/" class="link" id="git">View on github</a>
     </div>
 </header>
 <section id="root_cnt">
