problemm with scss

--- a/scr/tasks/task_4/public/index.html
+++ b/scr/tasks/task_4/public/index.html
@@ -27,6 +27,20 @@
         </div>
     </header>
 
+    <main>
+        <section>
+            <div class="width-cnt">
+                <div lass="banner">
+                    <div class="banner-title">
+                        <h1>AirPods Pro</h1>
+                        <button>Buy</button>
+                    </div>
+                    <img  src="./assets/banners/airpods_pro_banner.png" alt="AirPods Pro">
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
 
 </html>
