--- a/scr/tasks/task_4/public/index.html
+++ b/scr/tasks/task_4/public/index.html
@@ -15,10 +15,10 @@
     <header class="header">
         <div class="width-cnt">
             <nav class="header-nav">
-                <div class="logo">
+                <div class="logo flex-center">
                     <img src="./assets/icons/logo.svg" alt="Logo">
                 </div>
-                <div class="cart">
+                <div class="cart flex-center">
                     <button>
                         <img src="./assets/icons/cart.svg" alt="Cart Icon">
                     </button>
@@ -30,7 +30,7 @@
     <main>
         <section>
             <div class="width-cnt">
-                <div lass="banner">
+                <div class="banner">
                     <div class="banner-title">
                         <h1>AirPods Pro</h1>
                         <button>Buy</button>
