add sass file stucture, add dir and project  imports

--- a/scr/tasks/task_4/public/index.html
+++ b/scr/tasks/task_4/public/index.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../dist/css/styles.css">
-    
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;1,300&display=swap" rel="stylesheet">
+    <title>eStore</title>
 </head>
 
 <body>
@@ -33,7 +34,7 @@
                 <div class="banner">
                     <div class="banner-title">
                         <h1>AirPods Pro</h1>
-                        <button>Buy</button>
+                        <button class="theme-btn">Add to cart</button>
                     </div>
                     <img  src="./assets/banners/airpods_pro_banner.png" alt="AirPods Pro">
                 </div>
