--- a/scr/tasks/task_4/public/index.html
+++ b/scr/tasks/task_4/public/index.html
@@ -7,40 +7,115 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../dist/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;1,300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;1,300&display=swap"
+          rel="stylesheet">
+
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+    <!-- Add the slick-theme.css if you want default styling -->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
+
     <title>eStore</title>
 </head>
 
 <body>
 
-    <header class="header">
-        <div class="width-cnt">
-            <nav class="header-nav">
-                <div class="logo flex-center">
-                    <img src="./assets/icons/logo.svg" alt="Logo">
-                </div>
-                <div class="cart flex-center">
-                    <button>
-                        <img src="./assets/icons/cart.svg" alt="Cart Icon">
-                    </button>
-                </div>
-            </nav>
-        </div>
-    </header>
+<header class="header">
+    <div class="width-cnt">
+        <nav class="header-nav">
+            <div class="logo flex-center">
+                <img src="./assets/icons/logo.svg" alt="Logo">
+            </div>
+            <div class="cart flex-center">
+                <button>
+                    <img src="./assets/icons/cart.svg" alt="Cart Icon">
+                </button>
+            </div>
+        </nav>
+    </div>
+</header>
 
-    <main>
-        <section>
-            <div class="width-cnt">
-                <div class="banner">
-                    <div class="banner-title">
-                        <h1>AirPods Pro</h1>
-                        <button class="theme-btn">Add to cart</button>
+<main>
+    <section>
+        <div class="width-cnt">
+            <div id="slider" class="slider">
+                <div class="slide">
+                    <div class="banner">
+                        <div class="banner-title">
+                            <h1>AirPods Pro</h1>
+                            <button class="theme-btn">Add to cart</button>
+                        </div>
+                        <img src="./assets/banners/airpods_pro_banner.png" alt="AirPods Pro">
                     </div>
-                    <img  src="./assets/banners/airpods_pro_banner.png" alt="AirPods Pro">
+                </div>
+
+                <div class="slide">
+                    <div class="banner">
+                        <div class="banner-title">
+                            <h1>AirPods Max</h1>
+                            <button class="theme-btn">Add to cart</button>
+                        </div>
+                        <img src="./assets/banners/air_pods_max_banner.jpg" alt="AirPods Max">
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <div class="banner">
+                        <div class="banner-title">
+                            <h1>Apple TV</h1>
+                            <button class="theme-btn">Add to cart</button>
+                        </div>
+                        <img src="./assets/banners/apple_tv_banner.png" alt="Apple TV">
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <div class="banner">
+                        <div class="banner-title">
+                            <h1>iPad Air</h1>
+                            <button class="theme-btn">Add to cart</button>
+                        </div>
+                        <img src="./assets/banners/ipad_air_banner.jpg" alt="iPad Air">
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <div class="banner">
+                        <div class="banner-title">
+                            <h1>iPhone 12</h1>
+                            <button class="theme-btn">Add to cart</button>
+                        </div>
+                        <img src="./assets/banners/iphone_12_banner.jpg" alt="iPhone 12">
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <div class="banner">
+                        <div class="banner-title">
+                            <h1>Mac Book</h1>
+                            <button class="theme-btn">Add to cart</button>
+                        </div>
+                        <img src="./assets/banners/mac_book_banner.jpg" alt="Mac Book">
+                    </div>
+                </div>
+
+                <div class="slide">
+                    <div class="banner">
+                        <div class="banner-title">
+                            <h1>Apple Watch</h1>
+                            <button class="theme-btn">Add to cart</button>
+                        </div>
+                        <img src="./assets/banners/watch_banner.jpg" alt="Apple Watch">
+                    </div>
                 </div>
             </div>
-        </section>
-    </main>
+        </div>
+    </section>
+</main>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script type="text/javascript"  src="../../../../out/scr/tasks/task_4/src/index.js"></script>
 
 </body>
 
