add init logic to task4

--- a/scr/tasks/task_4/public/index.html
+++ b/scr/tasks/task_4/public/index.html
@@ -111,11 +111,50 @@
             </div>
         </div>
     </section>
+
+    <section>
+        <div class="width-cnt">
+
+            <div class="searchbar">
+                <div class="searchbar-icon"></div>
+                <label class="searchbar-input" for="searchbar">
+                    <input type="text" name="searchbar" id="searchbar" placeholder="Enter device name...">
+                </label>
+                <div class="searchbar-btn">
+                    <button class="searchbar-btn-sort"></button>
+                    <button class="searchbar-btn-settings"></button>
+                </div>
+            </div>
+
+            <div>
+                <div class="popup">
+                    <div class="popup-title">Order</div>
+                    <ul class="popup-items">
+                        <li class="popup-items-item">
+                            <div>Default</div>
+                        </li>
+                        <li class="popup-items-item">
+                            <div>Ascending</div>
+                        </li>
+                        <li class="popup-items-item">
+                            <div>Descending</div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="root_cnt">
+
+        </div>
+    </section>
 </main>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<script type="text/javascript"  src="../../../../out/scr/tasks/task_4/src/index.js"></script>
+<script type="text/javascript" src="../../../../out/scr/tasks/task_4/src/index.js"></script>
 
 </body>
 
