add task_5 -> Pexels Api script

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="./scr/tasks/task_3/ui/style.css">
+    <link rel="stylesheet" href="./scr/tasks/task_5/style/style.css">
     <title>Homeworks</title>
 </head>
 <body>
