create new task for switching between rendered content from different API, feature in reuse code from previous tasks

--- a/scr/tasks/task_4/macoutlet.html
+++ b/scr/tasks/task_4/macoutlet.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../dist/css/styles.css">
+    <link rel="stylesheet" href="dist/css/styles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,700;1,300&display=swap"
           rel="stylesheet">
@@ -24,11 +24,11 @@
     <div class="width-cnt">
         <nav class="header-nav">
             <div class="logo flex-center">
-                <img src="./assets/icons/logo.svg" alt="Logo">
+                <img src="assets/icons/logo.svg" alt="Logo">
             </div>
             <div class="cart flex-center">
                 <button>
-                    <img src="./assets/icons/cart.svg" alt="Cart Icon">
+                    <img src="assets/icons/cart.svg" alt="Cart Icon">
                 </button>
             </div>
         </nav>
@@ -45,7 +45,7 @@
                             <h1>AirPods Pro</h1>
                             <button class="theme-btn">Add to cart</button>
                         </div>
-                        <img src="./assets/banners/airpods_pro_banner.png" alt="AirPods Pro">
+                        <img src="assets/banners/airpods_pro_banner.png" alt="AirPods Pro">
                     </div>
                 </div>
 
@@ -55,7 +55,7 @@
                             <h1>AirPods Max</h1>
                             <button class="theme-btn">Add to cart</button>
                         </div>
-                        <img src="./assets/banners/air_pods_max_banner.jpg" alt="AirPods Max">
+                        <img src="assets/banners/air_pods_max_banner.jpg" alt="AirPods Max">
                     </div>
                 </div>
 
@@ -65,7 +65,7 @@
                             <h1>Apple TV</h1>
                             <button class="theme-btn">Add to cart</button>
                         </div>
-                        <img src="./assets/banners/apple_tv_banner.png" alt="Apple TV">
+                        <img src="assets/banners/apple_tv_banner.png" alt="Apple TV">
                     </div>
                 </div>
 
@@ -75,7 +75,7 @@
                             <h1>iPad Air</h1>
                             <button class="theme-btn">Add to cart</button>
                         </div>
-                        <img src="./assets/banners/ipad_air_banner.jpg" alt="iPad Air">
+                        <img src="assets/banners/ipad_air_banner.jpg" alt="iPad Air">
                     </div>
                 </div>
 
@@ -85,7 +85,7 @@
                             <h1>iPhone 12</h1>
                             <button class="theme-btn">Add to cart</button>
                         </div>
-                        <img src="./assets/banners/iphone_12_banner.jpg" alt="iPhone 12">
+                        <img src="assets/banners/iphone_12_banner.jpg" alt="iPhone 12">
                     </div>
                 </div>
 
@@ -95,7 +95,7 @@
                             <h1>Mac Book</h1>
                             <button class="theme-btn">Add to cart</button>
                         </div>
-                        <img src="./assets/banners/mac_book_banner.jpg" alt="Mac Book">
+                        <img src="assets/banners/mac_book_banner.jpg" alt="Mac Book">
                     </div>
                 </div>
 
@@ -105,7 +105,7 @@
                             <h1>Apple Watch</h1>
                             <button class="theme-btn">Add to cart</button>
                         </div>
-                        <img src="./assets/banners/watch_banner.jpg" alt="Apple Watch">
+                        <img src="assets/banners/watch_banner.jpg" alt="Apple Watch">
                     </div>
                 </div>
             </div>
@@ -154,7 +154,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<script type="module" src="../../../../out/scr/tasks/task_4/src/index.js"></script>
+<script type="module" src="../../../out/scr/tasks/task_4/src/index.js"></script>
 
 </body>
 
