add grid structure for product item cards, add click listenet for filter button and show filter card

--- a/scr/tasks/task_4/macoutlet.html
+++ b/scr/tasks/task_4/macoutlet.html
@@ -144,10 +144,9 @@
             </div>
         </div>
     </section>
-
     <section>
-        <div class="root_cnt">
-
+        <div class="width-cnt">
+            <div class="product_cnt" id="product_items_cnt"></div>
         </div>
     </section>
 </main>
