--- a/scr/tasks/task_4/test.html
+++ b/scr/tasks/task_4/test.html
@@ -9,41 +9,33 @@
     <title>Document</title>
 </head>
 <body style="width: 100%; height: 100%; align-content: center;">
-<div class="product_card">
-    <div class="product_card_body">
-        <div class="product_card_body_favorite_ico"></div>
-        <div class="product_card_body_photo">
-            <img src="assets/items/iphone11.jpeg" alt="AirPods Pro">
-        </div>
-        <p class="product_card_body_title">AirPods Pro</p>
-        <div class="product_card_body_stock">
-            <img src="assets/icons/check.svg" alt="">
-            <div><span id="product_card_left_in_stock">999</span> left in stock</div>
-        </div>
-        <div class="product_card_body_price">
-            <span>Price: <strong>299</strong> $</span>
-        </div>
-        <div class="product_card_body_btn">
-            <button>Add to cart</button>
-        </div>
-    </div>
-    <div class="product_card_footer">
-        <div class="product_card_footer_ico">
-            <img src="assets/icons/like_filled_red.svg" alt="like filled icon">
-        </div>
-        <div class="product_card_footer_rate">
-            <p>
-                <strong id="product_card_footer_rate">65%</strong>
-                <span>Positive reviews</span>
-            </p>
-            <p>Above average</p>
+<div>
+    <div class="product_cnt_filter">
+        <div class="filter_card">
 
-        </div>
-        <div class="product_card_footer_orders">
-            <p>
-                <strong id="product_card_footer_orders">296</strong>
-            </p>
-            <p>orders</p>
+            <div class="filter_card_header">
+                <span class="filter_card_header_title">Color</span>
+                <div id="filter_item_btn" class="filter_card_header_btn"
+                     onclick="collapseItemOnClick('filer_card_1')"></div>
+            </div>
+
+            <div id="filer_card_1" class="filter_card_content">
+<!--                <div class="filter_input_item">-->
+<!--                    <label class="filter_input_item_title" for="price_from">From</label>-->
+<!--                    <input class="filter_input_item_input" id="price_from" type="text" placeholder="350">-->
+<!--                </div>-->
+<!--                <div class="filter_input_item">-->
+<!--                    <label class="filter_input_item_title" for="price_to">To</label>-->
+<!--                    <input class="filter_input_item_input" id="price_to" type="text" placeholder="1350">-->
+<!--                </div>-->
+            </div>
+            <li>
+                <div>
+                    <input type="checkbox" id="filter_color_red" onchange="">
+                    <label for="filter_color_red">Red</label>
+                </div>
+            </li>
+
         </div>
     </div>
 </div>
