add filter by Color

--- a/scr/tasks/task_7/custom-input-range.html
+++ b/scr/tasks/task_7/custom-input-range.html
@@ -10,11 +10,8 @@
 </head>
 <body>
 <div class="cnt">
-
-    <input class="input" type="range" id="input_range" min="0" max="100">
+    <input class="input" type="range" id="input_range" min="0" max="100"/>
     <div id="input_label" class="label">50</div>
-    </input>
-
 </div>
 
 <script type="module" src="../../../out/scr/tasks/task_7/src/InputRangeComponent.js"></script>
