--- a/scr/tasks/task_4/macoutlet.html
+++ b/scr/tasks/task_4/macoutlet.html
@@ -151,6 +151,72 @@
     </section>
 </main>
 
+<!--<div class="popup_search">-->
+<!--    <div id="popup_search_no_matches" class="popup_search_no_matches">-->
+<!--        <p>Oops...</p>-->
+<!--        <span>We didn't find any product by selected parameters</span>-->
+<!--        <span>Please select another characteristic or search request</span>-->
+<!--    </div>-->
+<!--</div>-->
+
+<!--<div class="popup_backdrop">-->
+<!--    <div class="popup_product_card">-->
+<!--        <div class="popup_product_card_section">-->
+<!--            <img class="popup_product_card_section_img" src="./assets/items/airpods-max.jpg" alt="${item.name}">-->
+<!--        </div>-->
+<!--        <div class="popup_product_card_center">-->
+<!--            <h3>AirPods Max</h3>-->
+<!--            <div class="popup_product_card_center_social">-->
+<!--                <div class="popup_product_card_center_social_ico">-->
+<!--                    <img src="assets/icons/like_filled_red.svg" alt="like filled icon">-->
+<!--                </div>-->
+<!--                <div class="popup_product_card_center_social_rate">-->
+<!--                    <p>-->
+<!--                        <strong id="popup_product_card_center_social_rate">1000</strong>-->
+<!--                        <span>Positive reviews</span>-->
+<!--                    </p>-->
+<!--                    <p>Above average</p>-->
+
+<!--                </div>-->
+<!--                <div class="popup_product_card_center_social_orders">-->
+<!--                    <p>-->
+<!--                        <strong id="popup_product_card_center_social_orders">2000</strong>-->
+<!--                    </p>-->
+<!--                    <p>orders</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <ul class="popup_product_card_center_options">-->
+<!--                <li>-->
+<!--                    <div>Color: <span>Black</span></div>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <div>Operating System: <span>Black</span></div>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <div>Chip: <span>A10X</span></div>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <div>Height: <span>3.5 cm</span></div>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <div>Width: <span>9.8 cm</span></div>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <div>Depth: <span>.8 cm</span></div>-->
+<!--                </li>-->
+<!--                <li>-->
+<!--                    <div>Weight: <span>425 g</span></div>-->
+<!--                </li>-->
+<!--            </ul>-->
+<!--        </div>-->
+<!--        <div class="popup_product_card_section">-->
+<!--            <div class="product_card_body_btn">-->
+<!--                <button id="${btnId}">Add to cart</button>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script type="module" src="../../../out/scr/tasks/task_4/src/index.js"></script>
