add: listeners for cart buttons

--- a/scr/tasks/task_4/macoutlet.html
+++ b/scr/tasks/task_4/macoutlet.html
@@ -29,9 +29,7 @@
             <div class="cart_wrapper" id="shopping_cart">
                 <button class="cart_button" id="cart_button">
                     <img src="assets/icons/cart.svg" alt="Cart Icon">
-                    <div class="cart_index" id="cart_index">
-                        <span>3</span>
-                    </div>
+                    <div class="cart_index" id="cart_index">0</div>
                 </button>
 
 
